--- a/omnifood/resources/css/style.css
+++ b/omnifood/resources/css/style.css
@@ -2,13 +2,11 @@
 /* BASIC SETUP */
 /*--------------------------------------------------------*/
 
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
 
 html {
     color: #555;
@@ -32,21 +30,75 @@ html {
     margin: 0 auto;
 }
 
+section {
+    padding: 80px 0;
+}
+
+.box {
+    padding: 1% /*spacing out grid class cols without modifying grid source code */
+}
+/*----- HEADINGS -----*/
+
+h1,
+h2,
+h3 {
+    font-weight: 300;
+    text-transform: uppercase;
+}
 
 h1 {
     margin-top: 0;
     margin-bottom: 20px;
     color: #fff;
     font-size: 240%;
-    font-weight: 300;
-    text-transform: uppercase;
-    letter-spacing: 1px;
     word-spacing: 4px;
+    letter-spacing: 1px;
 }
 
+h2 {
+    font-size: 180%;
+    word-spacing: 4px;
+    text-align: center;
+    margin-bottom: 30px;
+    letter-spacing: 1px;
+}
 
-/*---BUTTONS---*/
+h3 {
+    font-size: 110%;
+    margin-bottom: 15px;
+}
 
+h2:after {
+    display: block;
+    height: 2px;
+    background-color: #e67e22;
+    content: " ";
+    width: 100px;
+    margin: 0 auto;
+    margin-top: 30px;
+
+}
+
+/*----- PARAGRAPHS -----*/
+.long-copy {
+    line-height: 145%;
+    width: 70%;
+    margin-left: 15%; /*trick to center it. specifying width will uncenter it but you can split remainder to margins*/
+}
+
+.box p {
+    font-size: 90%;
+    line-height: 145%;
+}
+
+/*----- ICONS -----*/
+.icon-big {
+    font-size: 400%;
+    display: block;
+    color: #e67e22;
+}
+
+/*----- BUTTONS -----*/
 
 .btn:link,
 .btn:visited {
@@ -58,7 +110,6 @@ h1 {
     transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
-
 .btn-full:link,
 .btn-full:visited {
     background-color: #e67e22;
@@ -67,25 +118,21 @@ h1 {
     margin-right: 15px;
 }
 
-
 .btn-ghost:link,
 .btn-ghost:visited {
     border: 1px solid #e67e22;
     color: #e67e22;
 }
 
-
 .btn:hover,
 .btn:active {
     background-color: #cf6d17
 }
 
-
 .btn-full:hover,
 .btn-full:active {
     border: 1px solid #cf6d17;
 }
-
 
 .btn-ghost:hover,
 .btn-ghost:active {
@@ -98,14 +145,12 @@ h1 {
 /* HEADER */
 /*--------------------------------------------------------*/
 
-
 header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
     background-size: cover;
     background-position: center;
     height: 100vh;
 }
-
 
 .hero-text-box {
     position: absolute;
