--- a/omnifood/resources/css/style.css
+++ b/omnifood/resources/css/style.css
@@ -197,9 +197,21 @@ header {
 
 
 /*--------------------------------------------------------*/
+/* FEATURES */
+/*--------------------------------------------------------*/
+
+.section-features .long-copy { /*adjusts the bottom margin of the features paragraph wo affecting all long copy p*/
+    margin-bottom: 30px;
+}
+
+
+/*--------------------------------------------------------*/
 /* MEALS */
 /*--------------------------------------------------------*/
 
+.section-meals {
+    padding: 0; /*don't want padding from section parent*/
+}
 .meals-showcase {
     list-style: none; /*affects the bullet points*/
     width: 100% /*makes this entire browser width*/
@@ -214,9 +226,19 @@ header {
 .meal-photo {
     width: 100%; /*has full width of parent, which is meal-showcase li*/
     margin: 0; /*overrides normalize.css margins*/
+    overflow: hidden;
+    background-color: #000;
 }
 
 .meal-photo img {
+    opacity: 0.7;
     width: 100%; /*ensures photo is as wide as container*/
     height: auto;
+    transform: scale(1.15);
+    transition: transform 0.5s, opacity 0.5s;
+}
+
+.meal-photo img:hover {
+    opacity: 1;
+    transform: scale(1.05);
 }
